--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
     (nzBeforeChange)="onBeforeChange($event)">
       <div class="carousel-item" nz-carousel-content *ngFor="let item of banners">
         <a [href]="item.url" target="_blank" class="banner-item">
-          <img appImgDefault [src]="item.imageUrl" />
+          <img appImgDefault [src]="item.picUrl" />
         </a>
       </div>
     </nz-carousel>
